--- a/VendasApp.csproj
+++ b/VendasApp.csproj
@@ -172,12 +172,6 @@
     <Compile Include="Crud\FrmUsuario.Designer.cs">
       <DependentUpon>FrmUsuario.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Processamento\FrmProcessarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -244,6 +238,8 @@
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\VendasApp.Models.Cliente.datasource" />
+    <None Include="Properties\DataSources\VendasApp.Models.Usuario.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
