--- a/VendasApp.csproj
+++ b/VendasApp.csproj
@@ -239,6 +239,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\VendasApp.Models.Cliente.datasource" />
+    <None Include="Properties\DataSources\VendasApp.Models.Produto.datasource" />
     <None Include="Properties\DataSources\VendasApp.Models.Usuario.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
