--- a/VendasApp.csproj
+++ b/VendasApp.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
@@ -254,7 +255,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\fechar.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="VendasApp.Data\VendasApp.Data.csproj">
       <Project>{c46a7099-5d81-4eab-8aa5-56fa9d30ce9c}</Project>
@@ -268,6 +271,66 @@
       <Project>{8d11c5b8-e923-40d1-a65c-48ffbd6dd4a3}</Project>
       <Name>VendasApp.Repository</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fechar1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fechar2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fechar21.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\maximizar2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimizar2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fechar22.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Close_Icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Minimize_Icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\OIP-3403786079.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Screenshot_1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Untitled 1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\31.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Screenshot_2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\usuario2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\senha.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\senha2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\senha3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\linha branca.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\linha.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SQLitePCLRaw.lib.e_sqlite3.2.0.4\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('packages\SQLitePCLRaw.lib.e_sqlite3.2.0.4\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
