--- a/VendasApp.csproj
+++ b/VendasApp.csproj
@@ -224,14 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -246,6 +241,11 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -254,9 +254,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\fechar.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="VendasApp.Data\VendasApp.Data.csproj">
@@ -273,64 +270,19 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\fechar1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\fechar2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\fechar21.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\maximizar2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\minimizar2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\fechar22.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\3.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Close_Icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Minimize_Icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\OIP-3403786079.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Screenshot_1.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Untitled 1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\31.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Screenshot_2.jpg" />
+    <Resource Include="Resources\Close_Icon.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\usuario2.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\senha.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\senha2.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\senha3.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\linha branca.jpg" />
+    <None Include="Resources\linha.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\linha.png" />
+    <None Include="Resources\Screenshot_2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SQLitePCLRaw.lib.e_sqlite3.2.0.4\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('packages\SQLitePCLRaw.lib.e_sqlite3.2.0.4\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
