Validação do documento do cliente

--- a/VendasApp.csproj
+++ b/VendasApp.csproj
@@ -204,6 +204,7 @@
     <Compile Include="FrmPrincipal.Designer.cs">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Validacoes\ValidacaoCliente.cs" />
     <EmbeddedResource Include="Crud\FrmCliente.resx">
       <DependentUpon>FrmCliente.cs</DependentUpon>
     </EmbeddedResource>
