--- a/packages.config
+++ b/packages.config
@@ -22,6 +22,8 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.25" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="3.1.25" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.25" targetFramework="net48" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net48" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net48" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.4" targetFramework="net48" />
   <package id="SQLitePCLRaw.core" version="2.0.4" targetFramework="net48" />
