Implementação do formulario de inventario

--- a/VendasApp.csproj
+++ b/VendasApp.csproj
@@ -190,6 +190,12 @@
     <Compile Include="Crud\FrmUsuario.Designer.cs">
       <DependentUpon>FrmUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Processamento\FrmInventario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Processamento\FrmInventario.Designer.cs">
+      <DependentUpon>FrmInventario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Processamento\FrmProcessarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -251,6 +257,9 @@
     <EmbeddedResource Include="Crud\FrmUsuario.resx">
       <DependentUpon>FrmUsuario.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Processamento\FrmInventario.resx">
+      <DependentUpon>FrmInventario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Processamento\FrmProcessarCliente.resx">
       <DependentUpon>FrmProcessarCliente.cs</DependentUpon>
     </EmbeddedResource>
@@ -285,6 +294,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\VendasApp.Models.Cliente.datasource" />
+    <None Include="Properties\DataSources\VendasApp.Models.Dto.Inventario.datasource" />
     <None Include="Properties\DataSources\VendasApp.Models.Produto.datasource" />
     <None Include="Properties\DataSources\VendasApp.Models.Usuario.datasource" />
     <None Include="Properties\Settings.settings">
