--- a/VendasApp.csproj
+++ b/VendasApp.csproj
@@ -212,6 +212,12 @@
     <Compile Include="Processamento\FrmProcessarProduto.Designer.cs">
       <DependentUpon>FrmProcessarProduto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Processamento\FrmVendas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Processamento\FrmVendas.Designer.cs">
+      <DependentUpon>FrmVendas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FrmLogin.cs">
