--- a/VendasApp.csproj
+++ b/VendasApp.csproj
@@ -293,6 +293,9 @@
     <EmbeddedResource Include="Processamento\FrmProcessarProduto.resx">
       <DependentUpon>FrmProcessarProduto.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Processamento\FrmVendas.resx">
+      <DependentUpon>FrmVendas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
@@ -335,6 +338,8 @@
     <None Include="Properties\DataSources\VendasApp.Models.Dto.Inventario.datasource" />
     <None Include="Properties\DataSources\VendasApp.Models.Produto.datasource" />
     <None Include="Properties\DataSources\VendasApp.Models.Usuario.datasource" />
+    <None Include="Properties\DataSources\VendasApp.Models.Vendas.datasource" />
+    <None Include="Properties\DataSources\VendasApp.Models.VendasItem.datasource" />
     <None Include="Properties\DataSources\VendasApp.Processamento.FrmInventario.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
